Fixed spacing in new activity modal

--- a/app/client/stylesheets/components/compositions/pu-composition-startpartup-activities.sass
+++ b/app/client/stylesheets/components/compositions/pu-composition-startpartup-activities.sass
@@ -11,3 +11,7 @@
     
     .pu-form
         margin: 0
+
+    .pu-block-activity-create
+        margin-top: 40px
+        margin-bottom: 40px
