--- a/app/client/stylesheets/components/pu-block.sass
+++ b/app/client/stylesheets/components/pu-block.sass
@@ -206,8 +206,8 @@
                     display: none
 
         &-create
-            margin-top: 40px
-            margin-bottom: 40px
+            margin-top: 0
+            margin-bottom: 0
             padding-top: 20px - 1px
             padding-bottom: 20px
 
